manifests/pvc_example.yaml

apiVersion: v1
kind: Pod
metadata:
  name: test-database
spec:
  containers:
    - name: postgres
      image: postgres:15
      volumeMounts:
        - name: db-storage
          mountPath: /var/lib/postgresql/data
  volumes:
    - name: db-storage
      persistentVolumeClaim:
        claimName: local-db-pvc
