manifests/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: default
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec: # <-- This line was shifted too far right in the previous version
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:9.15.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-nodeport-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80          
    targetPort: 80    
    nodePort: 32000
  selector:
    app: pgadmin
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-clusterip-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: pgadmin
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin-service-external-route
  namespace: default # Keeps it in the same namespace as your frontend service
spec:
  parentRefs:
    - name: public-gateway # <-- Must match the actual name of your Gateway resource
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /pgadmin/
      backendRefs:
        - name: pgadmin-clusterip-service
          port: 80
