manifests/prometheus-alert-manager-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-service-route
  namespace: prometheus-monitoring
spec:
  parentRefs:
    - name: public-gateway # Must match your actual Gateway resource name
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cluster_alertmanager/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: my-prometheus-kube-prometh-alertmanager # Standard Helm service name for Alertmanager
          port: 9093
